apps/immich/backend-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: immich
  namespace: immich
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: immich
  timeout:
    http:
      connectionIdleTimeout: 3600s
      requestTimeout: 3600s
